third_party/move/move-compiler-v2/tests/match-checks/dotdot_non_exhaustive.exp

Diagnostics:
error: match not exhaustive
   ┌─ tests/match-checks/dotdot_non_exhaustive.move:11:16
   │
11 │         match (x) {
   │                ^
   │
   = missing `E1::C{..}`
